# xairrosx

./: Cargo.toml  README.md  TODO.md  package-lock.json
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs
src/fs/: mod.rs  ramdisk.rs  vfs.rs
src/syscall/: mod.rs
src/task/: keyboard.rs  mod.rs
